--- a/ProductService/Properties/launchSettings.json
+++ b/ProductService/Properties/launchSettings.json
@@ -12,12 +12,12 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ServiceB": {
+    "ProductService": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
